fix up html stuff

--- a/src/main/resources/templates/PurchasedBooks.html
+++ b/src/main/resources/templates/PurchasedBooks.html
@@ -27,6 +27,7 @@
             <th>Version</th>
             <th>Name</th>
             <th>Publisher</th>
+            <th>Author</th>
             <th>Price</th>
             <th>Description</th>
             </thead>
@@ -35,6 +36,7 @@
                 <td th:text="${book.version}" />
                 <td th:text="${book.name}" />
                 <td th:text="${book.publisher}" />
+                <td th:text="${book.author}" />
                 <td th:text="${book.price}" />
                 <td th:text="${book.description}" />
             </tr>
