--- a/src/main/resources/templates/ShopItem.html
+++ b/src/main/resources/templates/ShopItem.html
@@ -34,6 +34,9 @@
                     <td th:text="'Publisher: '+${book.publisher}" />
                 </tr>
                 <tr>
+                    <td th:text="'Author: '+${book.author}" />
+                </tr>
+                <tr>
                     <td th:text="'Price: '+${book.price}" />
                 </tr>
                 <tr>
