--- a/src/main/resources/templates/ShoppingCart.html
+++ b/src/main/resources/templates/ShoppingCart.html
@@ -24,6 +24,7 @@
     <th>Version</th>
     <th>Name</th>
     <th>Publisher</th>
+    <th>Author</th>
     <th>Price</th>
     <th>Amount</th>
     </thead>
@@ -32,6 +33,7 @@
         <td th:text="${item.book.version}" />
         <td th:text="${item.book.name}" />
         <td th:text="${item.book.publisher}" />
+        <td th:text="${item.book.author}" />
         <td th:text="${item.book.price}" />
         <td th:text="${item.amount}" />
     </tr>
