--- a/src/main/resources/templates/Vendor.html
+++ b/src/main/resources/templates/Vendor.html
@@ -25,6 +25,7 @@
                         <th>Version</th>
                         <th>Name</th>
                         <th>Publisher</th>
+                        <th>Author</th>
                         <th>Price</th>
                         <th>Stock</th>
                         <th>Description</th>
@@ -34,6 +35,7 @@
                         <td th:text="${book.version}" />
                         <td th:text="${book.name}" />
                         <td th:text="${book.publisher}" />
+                        <td th:text="${book.author}" />
                         <td th:text="${book.price}" />
                         <td th:text="${book.stock}" />
                         <td th:text="${book.description}" />
