--- a/src/main/resources/templates/VendorCreate.html
+++ b/src/main/resources/templates/VendorCreate.html
@@ -57,6 +57,13 @@
                                         name="publisher" /></label
                                 ><br />
                                 <label
+                                >Author:
+                                    <input
+                                            type="text"
+                                            placeholder="Enter Author"
+                                            name="author" /></label
+                                ><br />
+                                <label
                                     >Stock:
                                     <input
                                         type="text"
