--- a/src/main/resources/templates/CustomerLogin.html
+++ b/src/main/resources/templates/CustomerLogin.html
@@ -10,6 +10,7 @@
         <navbar>
             <a th:href="@{/CustomerLogin}">Customer Login</a>
             <a th:href="@{/VendorLogin}">Vendor Login</a>
+            <a th:href="@{/SignUp}">Sign Up</a>
         </navbar>
 
         <div style="margin: 50px">
