--- a/src/main/resources/templates/Landing.html
+++ b/src/main/resources/templates/Landing.html
@@ -7,12 +7,14 @@
 </head>
 <body>
 
-
-<h1>Amazin Book Store</h1>
+<h1 style="margin: 50px">Amazin Book Store</h1>
 <navbar>
     <a th:href="@{/CustomerLogin}">Customer Login</a>
     <a th:href="@{/VendorLogin}">Vendor Login</a>
-    <a th:href="@{/SignUp}">SignUp</a>
+    <a th:href="@{/SignUp}">Sign Up</a>
 </navbar>
+    <div style="margin: 50px">Welcome to our bookstore, pick an option from the navbar above to start your bookish adventures!</div>
+    <div style="margin: 50px">We hope you enjoy your stay!</div>
+    <div style="margin: 50px">Built with ♡ from the Amazin bookstore team (Group 27 SYSC 4806)</div>
 </body>
 </html>
